# kissfft-rs

./: .gitmodules  Cargo.toml  README.md  shell.nix
fft4r/: Cargo.toml
fft4r/src/: complex.rs  lib.rs  real.rs
kissfft-sys/: Cargo.toml  bindgen.sh  build.rs  wrapper.h
kissfft-sys/src/: bindings.rs  lib.rs
