[package]
name = "fft4r"
version = "0.1.0"
authors = ["Andrey Cherkashin <andoriyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.3"
libc = "0.2"
kissfft-sys = { path = "../kissfft-sys" } 