[package]
name = "kissfft-sys"
version = "0.1.0"
authors = ["Andrey Cherkashin <andoriyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
num-complex = "0.3"
libc = "0.2"
[build-dependencies]
cc = "1.0"
